--- a/amplify.yml
+++ b/amplify.yml
@@ -11,7 +11,7 @@ applications:
             - npm --prefix ../infra run prepare:lambda
         build:
           commands:
-            - npx ampx pipeline-deploy --branch $AWS_BRANCH --app-id $AWS_APP_ID
+            - cd .. && npx ampx pipeline-deploy --branch $AWS_BRANCH --app-id $AWS_APP_ID
     frontend:
       phases:
         preBuild:
