--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "web:build": "npm --prefix web run build",
     "web:start": "npm --prefix web run start",
     "infra:prepare": "npm run build && npm --prefix infra run prepare:lambda",
+    "amplify:prepare": "npm run build && rm -rf amplify/dist && mkdir -p amplify/dist && cp -R dist/* amplify/dist/",
     "infra:build": "npm --prefix infra run sam:build",
     "infra:deploy:guided": "npm --prefix infra run sam:deploy:guided",
     "infra:deploy": "npm --prefix infra run sam:deploy",
