--- a/.gitignore
+++ b/.gitignore
@@ -5,9 +5,6 @@
 .env
 .env.local
 .env.*.local
-web/.env
-web/.env.local
-web/.env.*.local
 infra/.env
 infra/.env.local
 
@@ -26,11 +23,8 @@ dist/
 out/
 !out/.gitkeep
 
-# Next.js (web)
-web/node_modules/
-web/.next/
-web/.next-web/
-web/out/
+# Next.js
+.next/
 
 # AWS SAM / infra
 infra/node_modules/
